# libwmm

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.cc
include/: wmm.hh
include/libwmm/: wmm.hh
src/: GeomagnetismHeader.h  GeomagnetismLibrary.c  Makefile  wmm.cc
